# org-db-v3

./: .gitignore  LINKED_FILES_ARCHITECTURE.md  LINKED_FILES_PLAN.md  README.md  SUPPORTED_FORMATS.md  design.org  readme.org
elisp/: org-db-v3-agenda.el  org-db-v3-client.el  org-db-v3-gptel-tools.el  org-db-v3-parse.el  org-db-v3-search.el  org-db-v3-ui.el  org-db-v3.el
examples/: animals.org  flora.org  linked-file-examples.org
python/: pyproject.toml  test_docling.py  test_linked_files_api.py
python/org_db_server/: config.py  main.py  migrations.py
python/org_db_server/api/: indexing.py  linked_files.py  search.py  stats.py
python/org_db_server/models/: db_models.py  schemas.py
python/org_db_server/services/: chunking.py  database.py  docling_service.py  docling_worker.py  embeddings.py
python/org_db_server/templates/: homepage.html
python/tests/: test_image_search.py  test_indexing_api.py  test_linked_files_api.py
